# SRE-Agentic-Observability

./: .gitattributes  .gitignore  README.md  docker-compose.local.yml  ecr-policy.json  github-actions-ecr-bootstrap-policy.json  github-actions-ecr-push-policy.json  github-actions-terraform-deploy-policy copy.json  github-actions-terraform-deploy-policy.json  terraform-deploy-policy.json  testtodelte  updated-permissions.json
.github/workflows/: cd.yml  ci.yml  dev-reset.yml  security.yml
docs/: deployment.md  operations.md  scaling.md  security.md  troubleshooting.md
observability/alloy/: alloy.river
observability/dashboards/: agentic-sre-overview.json
observability/fluent-bit/: fluent-bit.conf  parsers.conf
scripts/: dev_reset.sh
services/alloy/: Dockerfile  alloy.river
services/python/: Dockerfile.api  Dockerfile.worker  pyproject.toml  requirements-dev.txt  requirements.txt
services/python/sre_platform/: logging.py  queue.py  settings.py
services/python/sre_platform/api/: app.py  wsgi.py
services/python/sre_platform/integrations/: slack.py
services/python/sre_platform/workers/: analyzer.py  executor.py  planner.py
services/python/tests/: test_message_schema.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/backend/: main.tf
terraform/envs/dev/: backend.hcl  main.tf
terraform/envs/prod/: backend.hcl  main.tf
terraform/envs/staging/: backend.hcl  main.tf
terraform/modules/alb/: main.tf  variables.tf
terraform/modules/cloudwatch/: main.tf
terraform/shared/: README.md
(+21 files in other folders)
