[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sre-platform"
version = "0.1.0"
description = "Agentic AI SRE Platform services"
requires-python = ">=3.12"
dependencies = [
  "flask==3.0.3",
  "gunicorn==22.0.0",
  "redis==5.0.8",
  "pydantic==2.8.2",
  "python-json-logger==2.0.7",
  "requests==2.32.3",
  "prometheus-client==0.20.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sre_platform*"]
